#
#  Copyright (C) 2017,2021 Ultramarin Design AB <dan@ultramarin.se>
#
#  This file is part of macgen.
#
#  macgen is free software; you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 2 of the License, or
#  (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program.  If not, see <http://www.gnu.org/licenses/>.

AM_CPPFLAGS = -I$(srcdir) -DSYSCONFDIR='"${sysconfdir}"'
AM_CXXFLAGS = -Wall -pipe -std=c++11 -O2 -g

bin_PROGRAMS = macgen
macgen_SOURCES  =
macgen_SOURCES += appargs.cpp
macgen_SOURCES += appargs.hpp
macgen_SOURCES += main.cpp
